# thumbnailer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release-macos.yml
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: GalleryGrid.jsx  PreviewModal.jsx  StatusPanel.jsx  Toolbar.jsx
src/constants/: thumbnail.js
src/hooks/: useGallery.js  usePreview.js  useThumbnailSize.js
src/utils/: gallery.js
